-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 17.0.0-beta1
-
None
-
Creator 17.0.0-beta1 + Qt 6.9.0
-
8626c2df9 (17.0)
Test steps:
1. Create a new 'Qt Quick Application'
2. Set a breakpoint to "Hello World" line
3. Start debugging the application
4. When the breakpoint is hit, stop the debugger
Result:
Crash.
For Gerrit Dashboard: QTCREATORBUG-32885 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
643192,2 | Revert "Debugger: Centralize the Qml FileInProjectFinder" | 17.0 | qt-creator/qt-creator | Status: ABANDONED | +1 | 0 |
643216,7 | Utils: Remove explicit pointer usage from FileInProjectFinder data | 17.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |