Utils: Remove explicit pointer usage from FileInProjectFinder data

FileInProjectFinder was effectively not copiable/not copy-assignable
due to the raw pointer values in the PathMappingNode::children hash
of type QHash<QString, PathMappingNode *> without suitable copy constructor
etc.

This went unnoticed for a long time as FileInProjectFinder were rarely
copied around, but got exposed by fc33b13b999a which moved their
(uncopied) use in the QmlDebugger to DebuggerRunParameters, which
nowadays are part of the Debugger's task tree storage, i.e. copied.

This here fixes the problem by making PathMappingNode::children a
QHash<QString, PathMappingNode>.

This also fixes a latent problem in OutputFormatter::setFileFinder()
which also copies a FileInProjectFinder object, which was lucky
insofar as the copy there had no child node populated yet, so the
copy there did no harm by lucky circumstances.

Fixes: QTCREATORBUG-32885
Change-Id: If30f0ae75b768692cfe6c30be4fcb2d6300086f8
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>